index.css
.searchBox {
  width: 70%;
}
.leftBar {
  background-color: #b5b5b5;
  padding: 10px;
  left: 0%;
}
/* makes two sliders into one */
.wrapper {
  /* position: absolute; */
  /* display: none; */
  top: 0%;
  width: 60%;
  height: 50px;
  left: 0%;
  background-color: gray;
  padding: 0px;
  border-radius: 50px;
}
.container {
  position: relative;
  width: 100%;
  height: 50%;
  margin-top: 10px;
}
.leftSlider {
  position: absolute;
  top: -100%;
  left: 5%;
  width: 90%;
  height: 50%;
  background-color: transparent;
}
.rightSlider {
  top: -100%;
  left: 5%;
  width: 90%;
  height: 0%;
  background-color: transparent;
}
input[type="range"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 90%;
  height: 5%;
  outline: gold;
  position: absolute;
  margin: auto;
  top: -30;
  bottom: 0;
  left: 5%;
  background-color: transparent;
  pointer-events: none;
}

#track1 {
  width: 80%;
  left: 10%;
  height: 40%;
  position: absolute;
  top: 0;
  bottom: 0;
  border-radius: 5%;
}
#track2 {
  width: 80%;
  left: 10%;
  height: 40%;
  position: absolute;
  top: 0;
  bottom: 0;
  border-radius: 5%;
}
input[type="range"]::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  height: 5%;
}
input[type="range"]::-moz-range-track {
  -moz-appearance: none;
  height: 5%;
  top: 10px;
}
input[type="range"]::-ms-track {
  appearance: none;
  height: 5%;
}
input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none;
  height: 1.7em;
  width: 1.7em;
  background-color: darkgrey;
  cursor: pointer;
  margin-top: -4%;
  pointer-events: auto;
  border-radius: 50%;
}
/* input[type="range"]:active::-webkit-slider-thumb {
  background-color: #ffffff;
  border: 20px solid #3264fe;
} */
.values {
  background-color: #c0c0c0;
  width: 50%;
  height: 1%;
  position: relative;
  margin: auto;
  padding: 10px 0;
  border-radius: 5px;
  text-align: center;
  font-weight: 500;
  font-size: 25px;
  color: #ffffff;
}
/* showing the values of sliders*/
.rangeRead {
  position: relative;
  color: #000;
  font-size: 70%;
  top: -17px;
}
.rangeDash {
  position: relative;
  color: #000;
  font-size: 70%;
  top: -17px;
}

.sort {
  position: absolute;
  color: #000;
  font-size: 70%;
  top: 10%;
  right: 40%;
}

.filterBtn {
  margin-top: 5%;
}

/* header code */

body {
  font-family: sans-serif, Arial, Helvetica;
}
* {
  box-sizing: border-box;
}

body {
  display: grid;
  grid-template-rows: 8vh 92vh;
  grid-template-columns: 20fr 80fr;
  grid-template-areas: "header header"
                       "filter results";
}
header { grid-area: header; }
#sort-results { grid-area: results; overflow-y: scroll; }
div.leftBar { grid-area: filter; }

header {
  padding: 2em;
  padding-top: 0.7em;
  padding-bottom: 0.7em;
  border-bottom: 3px solid lightgrey;
  border-radius: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
header .label {
  font-weight: 700;
  font-size: 20px;
}
header .popup {
  position: fixed;
  background: white;
  box-shadow: 0.05em 0.1em 0.1em lightgrey;
  /* margin: 0.5em; */
  padding: 0.5em;
}
header .label img {
  clip-path: circle();
  background-color: lightgrey;
  height: 1.5em;
  width: 1.5em;
}
.hidden {
  display: none !important;
}
#login-modal {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  display: grid;
  align-content: space-around;
  justify-content: space-around;
}
#login-modal form {
  border: 3px solid black;
  border-radius: 0.8em;
  padding: 1.5em;
  display: grid;
  align-content: space-around;
  justify-content: space-around;
  height: 30vh;
  width: 30vw;
}
#login-modal form input {
  border: 3px solid black;
  background: white;
  margin: 0.1em;
  display: inline-block;
  padding: 0.5em;
  border-radius: 0.5em;
}
#login-modal form input[type="submit"]:hover {
  background: #aaa2;
}

/* Listing */
html {
  /* padding: 0 10em; */
  font-family: Calibri, sans-serif;
}

.cd__main {
  max-width: 720px !important;
}

img {
  max-width: 220px;
  height: auto;
}

.image-left {
  margin: 1em 0;
  background: #eeeeee;
  border-radius: 2%;
  padding: 10px;
}

@media (min-width: 20em) {
  .image-left {
    display: flex;
    align-items: right;
  }

  .image-left img {
    margin-right: 1em;
    float: left;
    /* fallback */
  }

  /* clearfix for fallback */
  .image-left::after {
    content: "";
    display: block;
    clear: both;
  }
}

@media (min-width: 30em) {
  .image-left img {
    flex-shrink: 0;
  }
}

.image-left:hover {
  box-shadow: 0 5px 15px rgba(68, 68, 68, 0.8);
}

